plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.7'
    // formater
    id 'io.spring.javaformat' version '0.0.41'
}

group = 'com.mr'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // PostgreSQL 18, JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'

    // Lombok   , DevTools
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Health Check
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Spring Retry 및 AOP (알림 저장 실패 재시도용)
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

// Private Config Copy
tasks.register('copyPrivateConfig', Copy) {
    def envDir = file('./MR_config/local')

    if (!envDir.exists()) {
        envDir.mkdirs()
        file('./MR_config/local/application.yml').text = "# 이 경로에 복사한 로컬 설정을 채워 넣어 주세요!"
    }

    from './MR_config/local'
    into 'src/main/resources'
}

tasks.named('processResources') {
    dependsOn 'copyPrivateConfig'
}